content/browser/media/session/audio_focus_delegate_default.cc
@@ -113,6 +113,7 @@ void AudioFocusDelegateDefault::AbandonAudioFocus() {
 
   request_client_ptr_->AbandonAudioFocus();
   request_client_ptr_.reset();
+  audio_focus_ptr_.reset();
 }
 
 base::Optional<media_session::mojom::AudioFocusType>
