services/media_session/audio_focus_manager_metrics_helper.h
@@ -66,7 +66,7 @@ class AudioFocusManagerMetricsHelper {
 
   bool ShouldRecordMetrics() const;
 
-  const std::string& source_name_;
+  std::string source_name_;
 
   base::HistogramBase* const request_source_histogram_;
   base::HistogramBase* const focus_type_histogram_;
